--- a/src/main/resources/com/example/envoisrecois/MainView.fxml
+++ b/src/main/resources/com/example/envoisrecois/MainView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="1000.0" prefWidth="1920.0" stylesheets="@css/mainView.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.envoisrecois.controllersFx.MainViewController">
@@ -58,6 +59,7 @@
                         <Button layoutX="770.0" layoutY="73.0" mnemonicParsing="false" onAction="#onAfficheMessages" styleClass="bouton-haut" text="Messages" />
                         <Button mnemonicParsing="false" onAction="#onAfficheMessages" styleClass="bouton-haut" text="Ecrire" />
                         <Button mnemonicParsing="false" onAction="#onAfficheContacts" styleClass="bouton-haut" text="Contacts" />
+                        <Button layoutX="1145.0" layoutY="73.0" mnemonicParsing="false" onAction="#onNouveauContact" styleClass="bouton-haut" text="Nouveau" />
                         <Button mnemonicParsing="false" onAction="#onQuit" styleClass="bouton-haut" text="Quitter" />
                      </children>
                   </HBox>
@@ -67,7 +69,7 @@
          <center>
             <Pane BorderPane.alignment="TOP_CENTER">
                <children>
-                  <ScrollPane fx:id="centreContacts" fitToWidth="true" prefHeight="750.0" prefWidth="1520.0">
+                  <ScrollPane fx:id="centreContacts" fitToWidth="true" prefHeight="750.0" prefWidth="1520.0" visible="false">
                       <content>
                           <GridPane fx:id="gridListeContacts" alignment="TOP_CENTER" prefHeight="750.0" prefWidth="1320.0">
                               <columnConstraints>
@@ -104,6 +106,78 @@
                         </AnchorPane>
                     </items>
                   </SplitPane>
+                  <HBox fx:id="centreNouveauContact" alignment="CENTER" layoutX="360.0" layoutY="100.0" prefHeight="500.0" prefWidth="800.0" style="-fx-border-color: #333333; -fx-background-color: lightgrey;">
+                     <children>
+                        <GridPane prefHeight="500.0" prefWidth="500.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="181.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="319.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label styleClass="sans-effect" text="Nom :">
+                                 <padding>
+                                    <Insets right="20.0" />
+                                 </padding>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin></Label>
+                              <Label styleClass="sans-effect" text="Prénom :" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets right="20.0" />
+                                 </padding></Label>
+                              <Label styleClass="sans-effect" text="Adresse email :" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets right="20.0" />
+                                 </padding></Label>
+                              <Label styleClass="sans-effect" text="Téléphone :" GridPane.rowIndex="3">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets right="20.0" />
+                                 </padding></Label>
+                              <Label styleClass="sans-effect" text="Note :" GridPane.rowIndex="4">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets right="20.0" />
+                                 </padding></Label>
+                              <TextField fx:id="ajoutNom" GridPane.columnIndex="1" />
+                              <TextField fx:id="ajoutPrenom" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="ajoutEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="ajoutTelephone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextArea fx:id="ajoutNote" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                           </children>
+                        </GridPane>
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0" spacing="30.0">
+                           <children>
+                              <ImageView fitHeight="158.0" fitWidth="147.0" pickOnBounds="true" preserveRatio="true" styleClass="sans-effet">
+                                 <image>
+                                    <Image url="@images/avatar/exemple1.png" />
+                                 </image>
+                              </ImageView>
+                              <Button mnemonicParsing="false" onAction="#onAjoutContact" styleClass="bouton-haut" text="Ajouter contact" />
+                           </children>
+                        </VBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" />
+                     </padding>
+                  </HBox>
                </children>
             </Pane>
          </center>
