--- a/src/main/resources/com/example/envoisrecois/css/mainView.css
+++ b/src/main/resources/com/example/envoisrecois/css/mainView.css
@@ -23,3 +23,17 @@
     -fx-border-style: none;
     -fx-padding: 0;
 }*/
+
+.bordure-simple {
+
+    -fx-border-color: #1F1F1F;
+    -fx-border-style: solid;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+.effet-ombre {
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+.sans-effect{
+    -fx-border-width: none;
+    -fx-effect: none;
+}
