--- a/src/main/resources/com/example/envoisrecois/LoginView.fxml
+++ b/src/main/resources/com/example/envoisrecois/LoginView.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.envoisrecois.controllersFx.LoginController">
+<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.envoisrecois.controllersFx.LoginController">
    <children>
-      <Pane prefHeight="600.0" prefWidth="450.0" style="-fx-background-color: lightgreen;">
+      <Pane prefHeight="800.0" prefWidth="450.0" style="-fx-background-color: lightgreen;">
          <children>
             <ImageView fitHeight="512.0" fitWidth="256.0" layoutX="97.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -15,9 +15,9 @@
                </image>
             </ImageView>
          </children></Pane>
-      <Pane fx:id="paneLogin" layoutX="450.0" layoutY="140.0" prefHeight="460.0" prefWidth="350.0" style="-fx-background-color: lightblue;">
+      <Pane fx:id="paneLogin" layoutX="450.0" layoutY="140.0" prefHeight="660.0" prefWidth="350.0" style="-fx-background-color: lightblue;" visible="false">
          <children>
-            <VBox layoutX="45.0" layoutY="30.0" prefHeight="250.0" prefWidth="260.0" spacing="18.0">
+            <VBox layoutX="45.0" layoutY="40.0" prefHeight="250.0" prefWidth="260.0" spacing="18.0">
                <children>
                   <Label alignment="CENTER" prefWidth="260.0" text="Se connecter">
                      <font>
@@ -30,35 +30,37 @@
                   <Button mnemonicParsing="false" onAction="#onLogin" prefWidth="250.0" text="Se connecter" />
                </children>
             </VBox>
-            <Label layoutX="54.0" layoutY="287.0" text="Nouveau membre ?" />
-            <Button fx:id="OnInscription" layoutX="65.0" layoutY="314.0" mnemonicParsing="false" onAction="#onSinscrire" text="S'inscrire" />
-            <Button fx:id="OnPasswordPerdu" layoutX="175.0" layoutY="314.0" mnemonicParsing="false" text="Mot de passe perdu" />
-            <Button layoutX="117.0" layoutY="374.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
+            <Label layoutX="53.0" layoutY="330.0" text="Nouveau membre ?" />
+            <Button fx:id="OnInscription" layoutX="64.0" layoutY="357.0" mnemonicParsing="false" onAction="#onSinscrire" text="S'inscrire" />
+            <Button fx:id="OnPasswordPerdu" layoutX="174.0" layoutY="357.0" mnemonicParsing="false" text="Mot de passe perdu" />
+            <Button layoutX="116.0" layoutY="417.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
          </children>
       </Pane>
-      <Pane fx:id="paneInscription" layoutX="450.0" layoutY="140.0" prefHeight="460.0" prefWidth="350.0" style="-fx-background-color: lightblue;" visible="false">
+      <Pane fx:id="paneInscription" layoutX="450.0" layoutY="140.0" prefHeight="660.0" prefWidth="350.0" style="-fx-background-color: lightblue;">
          <children>
-            <Label layoutX="114.0" layoutY="14.0" text="S'inscrire">
+            <Label layoutX="117.0" layoutY="51.0" text="S'inscrire">
                <font>
                   <Font size="26.0" />
                </font>
             </Label>
-            <Label layoutX="18.0" layoutY="107.0" text="Nom" />
-            <Label layoutX="14.0" layoutY="147.0" text="Prénom" />
-            <Label layoutX="9.0" layoutY="189.0" text="Adresse Email" />
-            <Label layoutX="14.0" layoutY="234.0" text="Password" />
-            <Label layoutX="14.0" layoutY="268.0" text="Password" />
-            <TextField id="username" fx:id="fieldUserName" layoutX="86.0" layoutY="58.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" />
-            <TextField id="nom" fx:id="fieldNom" layoutX="86.0" layoutY="100.0" prefHeight="30.0" prefWidth="250.0" promptText="Nom" />
-            <TextField id="prenom" fx:id="fieldprenom" layoutX="86.0" layoutY="140.0" prefHeight="30.0" prefWidth="250.0" promptText="Prénom" />
-            <TextField id="email" fx:id="fieldEMail" layoutX="86.0" layoutY="182.0" prefHeight="30.0" prefWidth="250.0" promptText="Adresse email" />
-            <PasswordField id="password1" fx:id="fieldPassword" layoutX="86.0" layoutY="228.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
-            <PasswordField id="password2" fx:id="fieldPasswordConfirm" layoutX="86.0" layoutY="262.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
-            <Button layoutX="86.0" layoutY="300.0" mnemonicParsing="false" onAction="#onInscription" prefHeight="30.0" prefWidth="250.0" text="S'inscrire" />
-            <Button layoutX="199.0" layoutY="351.0" mnemonicParsing="false" onAction="#onSeConnecter" text="Se connecter" />
-            <Label layoutX="62.0" layoutY="355.0" text="Déjà inscrit ?" />
-            <Button layoutX="113.0" layoutY="408.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
-            <Label layoutX="18.0" layoutY="64.0" text="UserName" />
+            <Label layoutX="21.0" layoutY="144.0" text="Nom" />
+            <Label layoutX="17.0" layoutY="184.0" text="Prénom" />
+            <Label layoutX="12.0" layoutY="226.0" text="Adresse Email" />
+            <Label layoutX="17.0" layoutY="271.0" text="Password" />
+            <Label layoutX="17.0" layoutY="305.0" text="Password" />
+            <TextField id="username" fx:id="fieldUserName" layoutX="89.0" layoutY="95.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" />
+            <TextField id="nom" fx:id="fieldNom" layoutX="89.0" layoutY="137.0" prefHeight="30.0" prefWidth="250.0" promptText="Nom" />
+            <TextField id="prenom" fx:id="fieldprenom" layoutX="89.0" layoutY="177.0" prefHeight="30.0" prefWidth="250.0" promptText="Prénom" />
+            <TextField id="email" fx:id="fieldEMail" layoutX="89.0" layoutY="219.0" prefHeight="30.0" prefWidth="250.0" promptText="Adresse email" />
+            <PasswordField id="password1" fx:id="fieldPassword" layoutX="89.0" layoutY="265.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
+            <PasswordField id="password2" fx:id="fieldPasswordConfirm" layoutX="89.0" layoutY="299.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
+            <Button layoutX="91.0" layoutY="376.0" mnemonicParsing="false" onAction="#onInscription" prefHeight="30.0" prefWidth="250.0" text="S'inscrire" />
+            <Button layoutX="204.0" layoutY="427.0" mnemonicParsing="false" onAction="#onSeConnecter" text="Se connecter" />
+            <Label layoutX="67.0" layoutY="431.0" text="Déjà inscrit ?" />
+            <Button layoutX="118.0" layoutY="484.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
+            <Label layoutX="21.0" layoutY="101.0" text="UserName" />
+            <Label layoutX="17.0" layoutY="331.0" prefHeight="38.0" prefWidth="63.0" text="Password Messagerie" wrapText="true" />
+            <PasswordField id="password2" fx:id="fieldPasswordMessagerie" layoutX="91.0" layoutY="335.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
          </children>
       </Pane>
       <Pane layoutX="450.0" prefHeight="140.0" prefWidth="350.0" style="-fx-background-color: lavender;">
